--- a/frontend/src/components/SplashPage/SplashPage.css
+++ b/frontend/src/components/SplashPage/SplashPage.css
@@ -27,7 +27,7 @@ img {
     background-position: center center;
     background-size: cover;
     width: 100%;
-    height: 43.75rem;
+    height: 100vh;
     transition: opacity;
     transition-duration: 3s;
     overflow-y: hidden;
@@ -40,7 +40,7 @@ img {
     background-size: cover;
     background-position: center center;
     width: 100%;
-    height: 43.75rem;
+    height: 100vh;
     transition: opacity;
     transition-duration: 3s;
     opacity: 0;
